Configure bulma theme Pulse from Bulmaswatch

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,3 +1,5 @@
 @charset "utf-8";
 
+@import "~bulmaswatch/pulse/_variables.scss";
 @import "~bulma/bulma.sass";
+@import "~bulmaswatch/pulse/_overrides.scss";
