--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,5 +1,7 @@
 @charset "utf-8";
 
 @import "~bulmaswatch/pulse/_variables.scss";
+$body-size: 16px;
+
 @import "~bulma/bulma.sass";
 @import "~bulmaswatch/pulse/_overrides.scss";
