Add sample footer

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -2,6 +2,7 @@
 
 @import "~bulmaswatch/pulse/_variables.scss";
 $body-size: 16px;
+$footer-background-color: hsl(0, 0%, 93%);
 
 @import "~bulma/bulma.sass";
 @import "~bulmaswatch/pulse/_overrides.scss";
