--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -2,7 +2,8 @@
 
 @import "~bulmaswatch/pulse/_variables.scss";
 $body-size: 16px;
-$footer-background-color: hsl(0, 0%, 93%);
+$body-background-color: hsl(0, 0%, 96%);
+$footer-background-color: hsl(0, 0%, 86%);
 
 @import "~bulma/bulma.sass";
 @import "~bulmaswatch/pulse/_overrides.scss";
