--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -23,3 +23,8 @@ $footer-background-color: hsl(0, 0%, 86%);
   background: inherit;
   margin: inherit;
 }
+
+code {
+  padding-left: 5px !important;
+  padding-right: 5px !important;
+}
