--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -41,3 +41,17 @@ pre > code {
 .content ul ul {
   margin-bottom: 1em !important;
 }
+
+.skip-link {
+  position: absolute;
+  top: -40px;
+  left: 0;
+  background: #000000;
+  color: white;
+  padding: 8px;
+  z-index: 100;
+}
+
+.skip-link:focus {
+  top: 0;
+}
