ADD: Change dark mode style

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,11 +1,11 @@
 @charset "utf-8";
 
-@import "~bulmaswatch/pulse/_variables.scss";
+@import "~bulmaswatch/darkly/_variables.scss";
 $body-size: 16px;
-$body-background-color: hsl(0, 0%, 98%);
-$footer-background-color: hsl(0, 0%, 86%);
+//$body-background-color: hsl(0, 0%, 98%);
+//$footer-background-color: hsl(0, 0%, 86%);
 @import "~bulma/bulma.sass";
-@import "~bulmaswatch/pulse/_overrides.scss";
+@import "~bulmaswatch/darkly/_overrides.scss";
 
 @import "~prismjs/themes/prism-okaidia.css";
 .token.tag,
